Fix wraping cards on small screens

--- a/source/blocks/form/__layout/form__layout.post.css
+++ b/source/blocks/form/__layout/form__layout.post.css
@@ -1,3 +1,7 @@
 .form__layout {
-  margin: 28px 0;
+  margin: 14px 0 28px;
+  display: inline-block;
+  font-size: 16px;
+  text-align: left;
+  text-align: start;
 }
